...
            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:onClick="semester1Button"
                android:text="Semester 1"
                android:textColor="#ffffff"

                />
        </LinearLayout>

    </LinearLayout>
...
