...
                tools:showIn="@layout/activity_game_over">




        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
...
            android:background="@color/colorPrimary"
            android:orientation="horizontal">



            <Button
                android:id="@+id/saveScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:onClick="Savescore"
                android:text="Save score"/>

            <EditText
                android:id="@+id/namevalue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"

                android:hint="Insert your name"/>

...
