...
                android:onClick="hangman"
                android:textColor="#ffffff"

                />

            <Button
                android:id="@+id/button14"
                android:text="Quiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:onClick="quiz"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="6dp"
                android:textColor="#ffffff"

                />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:onClick="score"
                android:text="Score"
                android:layout_marginBottom="5dp"
...
